Bug 1906132 - Explicitly set bresize bit when doing a measuring reflow. r=dholbert

This doesn't change behavior, but it is more explicit.

Make the two resize code-paths invalidate the same way.

Differential Revision: https://phabricator.services.mozilla.com/D215841